# QuEST

./: .gitignore  CMakeLists.txt  data_collect.py  mat_plot.py
QuEST/: CMakeLists.txt
QuEST/include/: QuEST.h  QuEST_extended.h  QuEST_precision.h  compression.h  fpc-integration.h  fpc.h  fpzip-integration.h  zfp-config.h  zfp-integration.h
QuEST/src/: CMakeLists.txt  QuEST.c  QuEST_common.c  QuEST_extended.c  QuEST_internal.h
QuEST/src/CPU/: CMakeLists.txt  QuEST_cpu.c  QuEST_cpu_local.c  compression.c  zfp-integration.c
QuEST/src/GPU/: CMakeLists.txt  QuEST_gpu.cu  compression_gpu.cu  zfp-integration.cu
QuEST/src/compression/: CMakeLists.txt  compression.c  fpc-integration.c  fpc.c  fpzip-integration.c  zfp-integration.c
error_rate_comparison/: data-comp.py  error_rate_comparison.py  imaginary_unused_demo.py  test_dictionary.py  test_file1.txt
error_rate_comparison/imag_metrics/: quest_10_post.out  quest_10_pre.out  quest_11_post.out  quest_11_pre.out  quest_12_post.out  quest_12_pre.out  quest_13_post.out  quest_13_pre.out  quest_14_post.out  quest_14_pre.out  quest_15_post.out  quest_15_pre.out  quest_16_post.out  quest_16_pre.out
examples/: bernstein_vazirani_circuit.c  compression_grover_search.c  grovers_search.c  zfp_bernstein_vazirani_circuit.c  zfp_grover_search.c
fidelity_testing/: fidelity_test.py
fidelity_testing/fidelity_tests/fpzip/: fpzip_COMP_10.out  fpzip_COMP_11.out  fpzip_COMP_12.out  fpzip_COMP_13.out  fpzip_COMP_14.out  fpzip_COMP_15.out  fpzip_COMP_16.out
fidelity_testing/fidelity_tests/zfp/: zfp_COMP_10.out  zfp_COMP_11.out  (+5 more)
(+28 files in other folders)
